--- a/app/src/resources/views/addFriend/detail/friendRequest.hbs
+++ b/app/src/resources/views/addFriend/detail/friendRequest.hbs
@@ -74,7 +74,9 @@
         <div class='js-menu-contact menu-contact'>
             <div class='header-list-user'>
                 <input class='search-friend' type='text' placeholder='Tìm Kiếm' />
-                <button class='btn-add-form js-btn-add-form'><i class='ti-plus'></i></button>
+                <form action="/friend/home" method="get">
+                    <button class='btn-add-form js-btn-add-form'><i class='ti-plus'></i></button>
+                </form>
 
             </div>
             <form action='/friend/home' method='get'>
