--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -208,7 +208,8 @@ body {
         .main-content-page .full-message-block .username-inbox .block-call button:focus {
           outline: none; }
   .main-content-page .header-list-user {
-    margin-bottom: 10px; }
+    margin-bottom: 10px;
+    display: flex; }
     .main-content-page .header-list-user .search-friend {
       width: calc(100% - 60px);
       margin: 5px;
@@ -218,6 +219,8 @@ body {
       border: none; }
     .main-content-page .header-list-user .search-friend:focus {
       outline: none; }
+    .main-content-page .header-list-user form {
+      margin: 5px; }
     .main-content-page .header-list-user .btn-add-form {
       border: none;
       border-radius: 20px;
@@ -233,22 +236,20 @@ body {
     .main-content-page .menu-contact div {
       margin: 12px 0;
       padding: 0 10px; }
-    .main-content-page .menu-contact form {
-      width: 100%; }
-      .main-content-page .menu-contact form button {
-        width: 100%;
-        padding: 16px 20px;
-        font-size: 20px;
-        font-weight: 500;
-        background-color: #fff;
-        border: none; }
-        .main-content-page .menu-contact form button i {
-          font-size: 20px; }
-      .main-content-page .menu-contact form > button:hover {
-        background-color: #F0F2F5;
-        cursor: pointer; }
-      .main-content-page .menu-contact form > button:focus {
-        outline: none; }
+    .main-content-page .menu-contact form button {
+      width: 100%;
+      padding: 16px 20px;
+      font-size: 20px;
+      font-weight: 500;
+      background-color: #fff;
+      border: none; }
+      .main-content-page .menu-contact form button i {
+        font-size: 20px; }
+    .main-content-page .menu-contact form > button:hover {
+      background-color: #F0F2F5;
+      cursor: pointer; }
+    .main-content-page .menu-contact form > button:focus {
+      outline: none; }
   .main-content-page .full-message-block.narrow {
     width: 56vw; }
   .main-content-page .block-profile-chat {
