--- a/app/src/resources/views/addFriend/detail/friendRequest.hbs
+++ b/app/src/resources/views/addFriend/detail/friendRequest.hbs
@@ -66,6 +66,7 @@
                                 {{userNameFInstance.birthday}}
                             </span>
                         </div>
+                        <a href="/user/profile">Chỉnh sửa</a>
 
                     </div>
                 </div>
