--- a/app/src/resources/views/user/register.hbs
+++ b/app/src/resources/views/user/register.hbs
@@ -11,6 +11,8 @@
                 id="passwordUser" placeholder="Nhập lại mật khẩu">
             <input class="input-create-account" type="email" name="email" class="form-control" id="exampleInputEmail1"
                 aria-describedby="emailHelp" placeholder="Email">
+            <input class="input-create-account" type="text" name="phone" class="form-control" id="exampleInputPhone1"
+                aria-describedby="emailHelp" placeholder="Số điện thoại">
             {{!-- <label for="male">Nam</label>
             <input type="radio" class="input-gender" id="male" name="gender" value="male">
 
