--- a/app/src/resources/views/addFriend/detail/listFriend.hbs
+++ b/app/src/resources/views/addFriend/detail/listFriend.hbs
@@ -69,6 +69,7 @@
                                 {{userNameFInstance.birthday}}
                             </span>
                         </div>
+                        <a href="/user/profile">Chỉnh sửa</a>
 
                     </div>
                 </div>
@@ -114,8 +115,7 @@
             </header>
             <div class="search-friend">
                 <form action="/friend/showRequest" method="post">
-                    <input type="text" name="userNameFriend" class="input-username-add" value=""
-                        placeholder="Tài khoản">
+                    <input type="text" name="search" class="input-username-add" value="" placeholder="Tìm kiếm">
                     <button class="js-btn-search" type="submit"><i class="ti-search"></i></button>
                 </form>
             </div>
@@ -185,7 +185,7 @@
 
         try {
             const response = await axios.post('/friend/showRequest', {
-                userNameFriend: userNameFriend
+                search: userNameFriend
             });
 
             // Xử lý dữ liệu từ response và hiển thị vào div.search-friend
