--- a/app/src/resources/views/chat.hbs
+++ b/app/src/resources/views/chat.hbs
@@ -92,6 +92,7 @@
                             {{userNameFInstance.birthday}}
                         </span>
                     </div>
+                    <a href="/user/profile">Chỉnh sửa</a>
 
                 </div>
             </div>
@@ -727,7 +728,8 @@
 
 
 {{!-- hieu bl --}}
-{{!-- <script>
+{{!--
+<script>
     const btnadd = document.querySelectorAll('.js-btn-add-form')
     const modalAddFriend = document.querySelector('.js-modal-add-friend')
     const formAddFriend = document.querySelector('.js-form-add-friend')
