fix bug share locate

--- a/app/src/resources/views/chat.hbs
+++ b/app/src/resources/views/chat.hbs
@@ -617,7 +617,6 @@
                 const { latitude, longitude } = position.coords;
                 const latitudeEncode = encode(latitude.toString())
                 const longitudeEncode = encode(longitude.toString())
-                console.log(latitudeEncode)
                 socket.emit("share-location", { userNameF: userNameFNhan, userNameT: userNameT, latitude: latitudeEncode, longitude: longitudeEncode, fullName, userNameT_FullName, userChat: userNameF });
 
 
@@ -637,7 +636,7 @@
                 messageRow.classList.add('message__row1', 'message__row2');
 
                 //giải mã
-                var messDecode = decode(data.message.message)
+                var messDecode = decode(data.messEncode)
                 // Tạo phần tử con (a.message__content.message__content2)
                 var messageContent = document.createElement('a');
                 messageContent.classList.add('message__content', 'message__content2');
@@ -678,7 +677,6 @@
                 var avatarFriend = document.createElement('img');
                 avatarFriend.classList.add('avt-friend');
                 //avatarFriend.src = data.userT.avatar;
-                console.log(data.userT.avatar)
                 avatarFriend.src = data.userT.avatar;
                 avatarFriend.alt = '1';
 
@@ -690,7 +688,8 @@
                 messageRow1.classList.add('message__row1');
 
                 //giải mã
-                var messDecode = decode(data.message.message)
+                var messDecode = decode(data.messEncode)
+
                 // Tạo phần tử con (a.message__content)
                 var messageContent = document.createElement('a');
                 messageContent.classList.add('message__content');
@@ -727,7 +726,8 @@
 
 
 {{!-- hieu bl --}}
-{{!-- <script>
+{{!--
+<script>
     const btnadd = document.querySelectorAll('.js-btn-add-form')
     const modalAddFriend = document.querySelector('.js-modal-add-friend')
     const formAddFriend = document.querySelector('.js-form-add-friend')
