--- a/app/src/resources/views/addFriend/detail/listFriend.hbs
+++ b/app/src/resources/views/addFriend/detail/listFriend.hbs
@@ -25,7 +25,7 @@
             </form>
             {{!-- icon show profile --}}
             <div class="modal-myprofile js-modal-myprofile">
-                <div class="block-profile my-profile js-my-profile">
+                <form action="/user/profile" class="block-profile my-profile js-my-profile">
                     <div class="header-profile">
                         <h5>Thông tin tài khoản</h5>
                     </div>
@@ -69,10 +69,15 @@
                                 {{userNameFInstance.birthday}}
                             </span>
                         </div>
-                        <a href="/user/profile">Chỉnh sửa</a>
+                        
 
                     </div>
+                    <div class="btn-edit-profile">
+                    <button>
+                        Chỉnh sửa
+                    </button>
                 </div>
+                </form>
             </div>
         </div>
         <div class="js-menu-contact menu-contact">
