--- a/app/src/resources/views/chat.hbs
+++ b/app/src/resources/views/chat.hbs
@@ -48,7 +48,7 @@
             <button class="btn-logout" type="submit"><i class="ti-shift-left"> </i></button>
         </form>
         <div class="modal-myprofile js-modal-myprofile">
-            <div class="block-profile my-profile js-my-profile">
+            <form action="/user/profile" class="block-profile my-profile js-my-profile">
                 <div class="header-profile">
                     <h5>Thông tin tài khoản</h5>
                 </div>
@@ -92,10 +92,14 @@
                             {{userNameFInstance.birthday}}
                         </span>
                     </div>
-                    <a href="/user/profile">Chỉnh sửa</a>
 
                 </div>
-            </div>
+                <div class="btn-edit-profile">
+                    <button>
+                        Chỉnh sửa
+                    </button>
+                </div>
+            </form>
         </div>
     </div>
     <div id="list-user-block" class="js-list-user-block block-list-user open">
@@ -115,7 +119,7 @@
                     <img src="{{this.userNameFriendAvt}}" alt="">
                 </div>
 
-                <div>
+                <div class="name-friend-item">
                     <p>{{this.userNameFriendFullName}}</p>
                     <p>{{this.latestMessage}}</p>
                 </div>
@@ -131,7 +135,7 @@
                     <img src="{{this.userNameFriendAvt}}" alt="">
                 </div>
 
-                <div>
+                <div class="name-friend-item">
                     <p>{{this.userNameFriendFullName}}</p>
                     <p>{{this.latestMessage}}</p>
                 </div>
